--- a/css/main.css
+++ b/css/main.css
@@ -122,10 +122,6 @@ html {
   font-size: 16px;
 }
 
-/*******************************************/
-
-/*******************************************/
-
 .side-block {
   max-width: 300px;
   width: 100%;
@@ -157,8 +153,6 @@ header .header__title p {
   color: #ffffff;
   padding-top: 2rem;
 }
-
-/** Advantages **/
 
 .advantages {
   color: #000;
@@ -195,7 +189,89 @@ header .header__title p {
   margin-bottom: 6rem;
 }
 
-/******************************************/
+/***Hidden menu***/
+
+.hidden-menu {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 300px;
+  width: 100%;
+  background-color: #fff;
+}
+
+.hidden-menu .hamburger-menu {
+  position: relative;
+  top: 30px;
+  left: 50px;
+  z-index: 150;
+}
+
+.hidden-menu .hamburger-menu .line {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  width: 30px;
+  height: 3px;
+  margin-bottom: 4px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #fff;
+  color: blue;
+}
+
+.hidden-menu .hidden-menu__items {
+  position: absolute;
+  top: -5000px;
+  left: 10px;
+  max-width: 600px;
+  width: 100%;
+  background-color: #fff;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  font-size: 1rem;
+  color: #000;
+  z-index: 200;
+}
+
+.hidden-menu .hidden-menu__items .btn-order {
+  background-color: #ec2020;
+  border: none;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  padding: 20px 60px;
+  font-family: "Century Gothic Regular";
+  font-size: 1.2rem;
+  color: #fff;
+  margin-top: 50px;
+}
+
+.hidden-menu .hidden-menu__items p {
+  font-family: "Century Gothic Regular";
+  font-size: 1rem;
+  padding: 10px 10px;
+}
+
+.hidden-menu .hidden-menu__items p a {
+  color: #000;
+}
+
+.hidden-menu .hidden-menu__items .h-contacts {
+  margin-top: -50px;
+}
 
 .fixed-menu {
   background-color: #fff;
@@ -208,14 +284,12 @@ header .header__title p {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: fixed;
   left: 0;
   top: 0;
   max-width: 280px;
   width: 100%;
-  z-index: 10;
+  z-index: 40;
   /*menu-items*/
-  /*order-items*/
 }
 
 .fixed-menu .menu-items {
@@ -286,8 +360,6 @@ header .header__title p {
 
 /*fixed-menu*/
 
-/*************************************/
-
 .slider {
   color: #fff;
   font-family: 'Century Gothic Regular';
@@ -297,7 +369,6 @@ header .header__title p {
           background-size: cover;
   max-width: 1600px;
   width: 100%;
-  /*slider-content*/
 }
 
 .slider .prev {
@@ -373,8 +444,6 @@ header .header__title p {
 
 /*slider*/
 
-/*************************************/
-
 .our-contacts {
   max-width: 1600px;
   width: 100%;
@@ -388,7 +457,6 @@ header .header__title p {
       -ms-flex-align: center;
           align-items: center;
   padding: 3rem;
-  /*form*/
   /*contact-btn*/
 }
 
@@ -400,6 +468,7 @@ header .header__title p {
 
 .our-contacts form {
   margin-top: 2rem;
+  margin-left: -1.8rem;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
@@ -474,51 +543,82 @@ header .header__title p {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
+  header .header__title h1 {
+    padding-top: 7rem;
+  }
+
   .fixed-menu {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
+  }
+
+  .fixed-menu {
     max-width: 1024px;
-    height: 6rem;
-    width: 100%;
   }
 
   .fixed-menu .menu-items {
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 30px 20px 0 10px;
+    padding: 25px 20px 0 20px;
+  }
+
+  .fixed-menu .menu-items {
+    margin-top: 30px;
+  }
+
+  .fixed-menu .menu-items {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 
   .fixed-menu .menu-items .menu-item a {
-    margin-right: 15px;
-    font-size: 0.9rem;
+    padding-left: 1.2rem;
   }
 
-  .fixed-menu .menu-items .menu-item a:first-child {
-    margin-left: 10px;
+  .fixed-menu .menu-items .menu-item a {
+    font-size: 1.2rem;
   }
 
-  .fixed-menu .menu-order {
-    -webkit-transform: scale(0.9);
-        -ms-transform: scale(0.9);
-            transform: scale(0.9);
-    margin: 2rem -40px;
+  .fixed-menu .order-items .menu-order {
+    padding: 10px 0;
   }
 
-  .fixed-menu .contacts p {
-    line-height: 2rem;
+  .fixed-menu .order-items .menu-order {
+    margin-top: 15px;
+  }
+
+  .fixed-menu .order-items .menu-order {
+    margin-bottom: 0.5rem;
+  }
+
+  .fixed-menu .order-items .menu-order span {
+    font-size: 1.2rem;
+  }
+
+  .fixed-menu .order-items .contacts {
     font-size: 1rem;
-    padding-left: 30px;
   }
 
-  .slider-content p {
-    -webkit-transform: scale(0.8);
-        -ms-transform: scale(0.8);
-            transform: scale(0.8);
+  .fixed-menu .order-items .contacts {
+    line-height: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .fixed-menu .order-items .menu-order {
+    display: none;
+  }
+
+  .fixed-menu .order-items .contacts {
+    display: none;
+  }
+
+  .fixed-menu {
+    display: none;
   }
 }
