--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,11 @@ img {
   color: #ec2020;
 }
 
+.bgr-red {
+  background-color: #ec2020;
+  color: #fff;
+}
+
 html {
   font-size: 16px;
 }
@@ -128,7 +133,7 @@ html {
 }
 
 header {
-  background: url(/img/head_bgr.jpg) no-repeat;
+  background: url(../img/head_bgr.jpg) no-repeat;
   max-width: 1600px;
   width: 100%;
   height: 980px;
@@ -141,7 +146,7 @@ header .header__title {
 header .header__title h1 {
   font-family: "Century Gothic Regular";
   font-size: 7rem;
-  padding-top: 6rem;
+  padding-top: 7rem;
   color: #fff;
   width: 40rem;
   margin-bottom: 4rem;
@@ -188,8 +193,6 @@ header .header__title p {
   padding: 0 2rem;
   margin-bottom: 6rem;
 }
-
-/***Hidden menu***/
 
 .hidden-menu {
   display: -webkit-box;
@@ -364,7 +367,7 @@ header .header__title p {
   color: #fff;
   font-family: 'Century Gothic Regular';
   text-align: center;
-  background: url(/img/slide1.jpg) no-repeat center;
+  background: url(../img/slide1.jpg) no-repeat center;
   -webkit-background-size: cover;
           background-size: cover;
   max-width: 1600px;
@@ -374,7 +377,7 @@ header .header__title p {
 .slider .prev {
   position: relative;
   top: 0;
-  left: -40%;
+  left: -42%;
   z-index: 20;
   max-width: 5rem;
   width: 100%;
@@ -386,7 +389,7 @@ header .header__title p {
 .slider .next {
   position: relative;
   top: 100%;
-  left: 40%;
+  left: 42%;
   z-index: 20;
   max-width: 5rem;
   width: 100%;
@@ -421,6 +424,11 @@ header .header__title p {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-align-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-align-self: center;
       -ms-flex-item-align: center;
           align-self: center;
@@ -457,7 +465,6 @@ header .header__title p {
       -ms-flex-align: center;
           align-items: center;
   padding: 3rem;
-  /*contact-btn*/
 }
 
 .our-contacts h2 {
@@ -489,33 +496,27 @@ header .header__title p {
   color: #000;
 }
 
-.our-contacts .contact-btn {
+.our-contacts span {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.our-contacts .btn-send {
   background-color: #ec2020;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-align-self: center;
-      -ms-flex-item-align: center;
-          align-self: center;
+  text-align: center;
   border: none;
   color: #fff;
   max-width: 520px;
   width: 100%;
   font-size: 60px;
   padding: 34px 0;
-  margin-top: 4rem;
+  margin-top: 3rem;
   -webkit-border-radius: 20px;
           border-radius: 20px;
-  margin-left: 10rem;
   font-family: "Century Gothic Regular";
 }
-
-/*our-contacts*********************************/
 
 @media screen and (min-width: 1440px) {
   .fixed-menu {
@@ -545,7 +546,7 @@ header .header__title p {
 
 @media screen and (max-width: 1100px) {
   header .header__title h1 {
-    padding-top: 7rem;
+    padding-top: 9rem;
   }
 
   .fixed-menu {
@@ -609,16 +610,18 @@ header .header__title p {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .fixed-menu {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 560px) {
   .fixed-menu .order-items .menu-order {
     display: none;
   }
 
   .fixed-menu .order-items .contacts {
-    display: none;
-  }
-
-  .fixed-menu {
     display: none;
   }
 }
