Правка адаптива на 1336

--- a/css/main.css
+++ b/css/main.css
@@ -538,14 +538,17 @@ header .header__title p {
 
   .fixed-menu {
     width: 15%;
-    -webkit-transform: scale(0.8);
-        -ms-transform: scale(0.8);
-            transform: scale(0.8);
+    -webkit-transform: scale(0.9);
+        -ms-transform: scale(0.9);
+            transform: scale(0.9);
+    margin-left: 0;
   }
 
   .block-wrap {
-    width: 83%;
-    margin-left: 250px;
+    width: 100%;
+    -webkit-transform: scaleX(0.95);
+        -ms-transform: scaleX(0.95);
+            transform: scaleX(0.95);
   }
 
   .slider-content {
