--- a/css/main.css
+++ b/css/main.css
@@ -549,6 +549,7 @@ header .header__title p {
     -webkit-transform: scaleX(0.95);
         -ms-transform: scaleX(0.95);
             transform: scaleX(0.95);
+    margin-left: 0;
   }
 
   .slider-content {
