--- a/css/main.css
+++ b/css/main.css
@@ -529,7 +529,7 @@ header .header__title p {
 
 @media screen and (max-width: 1336px) {
   .menu-items {
-    margin-top: -80%;
+    margin-top: -40%;
   }
 
   .menu-items .contacts {
@@ -537,28 +537,20 @@ header .header__title p {
   }
 
   .fixed-menu {
-    width: 15%;
-    -webkit-transform: scale(0.9);
-        -ms-transform: scale(0.9);
-            transform: scale(0.9);
+    width: 20%;
     margin-left: 0;
   }
 
   .block-wrap {
+    max-width: 1030px;
     width: 100%;
-    -webkit-transform: scaleX(0.95);
-        -ms-transform: scaleX(0.95);
-            transform: scaleX(0.95);
-    margin-left: 0;
+    margin-left: 300px;
   }
 
   .slider-content {
     -webkit-transform: scale(0.8);
         -ms-transform: scale(0.8);
             transform: scale(0.8);
-    -webkit-transform: translateX(-10%);
-        -ms-transform: translateX(-10%);
-            transform: translateX(-10%);
   }
 }
 
